--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,38 +1,29 @@
 ---
 driver:
   name: ec2
-  aws_ssh_key_id: tony-sturdy-lab
+  instance_type: t2.large
   region: us-west-2
-  availability_zone: us-west-2a
-  require_chef_omnibus: true
-  security_group_ids:
-    - sg-f7674d91
-  subnet_id: subnet-b61928c1
-  associate_public_ip: true
-  instance_type: t2.micro
-  # iam_profile_name: messages-int-ec2-role-iamInstanceProfile-X5K7DVAMPOC6
-  user_data: "yum -y install openssh-clients"
+  iam_profile_name: S3WorkerRoleforEC2
   tags:
+    Name: test-kitchen-<%= ENV['USER'] %>
     Owner: <%= ENV['USER'] %>
-
 provisioner:
-  name: chef_solo
-  require_chef_omnibus: 12.19.36-1
-
-transport:
-  name: sftp
+  name: chef_zero
+  log_level: info
+  require_chef_omnibus: 14.4
+  always_update_cookbooks: true
 
 platforms:
   - name: amazon
     driver:
-      image_id: ami-d874e0a0
+      image_id: ami-6cd6f714
     transport:
       username: ec2-user
+  - name: windows-2012
 
 suites:
   - name: metrics_maker
     run_list:
       - recipe[metric_maker]
       - recipe[metric_maker::examples]
-    attributes: {
-    }
+    attributes: {}
